<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui<br />film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan<br />update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk<br />transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="memulai">MEMULAI</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">Back Button</string>
    <string name="username_desc">fauzan264</string>
    <string name="nama">Nama</string>
    <string name="name_desc">Ahmad Fauzan</string>
    <string name="email">Email</string>
    <string name="email_desc">fauzan.c4@gmail.com</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="selamat_datang">Selamat Datang<br />Ahmad Fauzan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">BATALKAN</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="when">When</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
</resources>