<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".onboarding.OnBoardingOneActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_rectangle_pink"
        android:text="@string/beli_tiket"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/pilih_bangku"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Alita Battle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:srcCompat="@drawable/ic_layar" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Layar Bioskop"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <LinearLayout
        android:id="@+id/bangku_a"
        android:padding="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="A"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bangku_b"
        android:padding="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bangku_a">

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="B"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bangku_c"
        android:padding="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bangku_b">

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="C"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bangku_d"
        android:padding="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bangku_c">

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="D"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/shape_line_blue_grey"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_rectangle_booked"
        android:drawablePadding="10dp"
        android:text="Booked"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_rectangle_empty"
        android:drawablePadding="10dp"
        android:text="Empty"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_rectangle_selected"
        android:drawablePadding="10dp"
        android:text="Selected"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintStart_toEndOf="@+id/textView19" />

</androidx.constraintlayout.widget.ConstraintLayout>